// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SiteHeader renders correctly with all nav links 1`] = `
.c7 {
  background: var(--color-button);
  border: none;
  border-radius: 4px;
  color: var(--color-button-text);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  opacity: 1;
  padding: 0.75rem 1.25rem;
  transition: all 0.2s ease-in-out;
}

.c7:focus {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c7:focus:not(:focus-visible) {
  outline: none;
}

.c7:focus-visible {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c3:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c11 {
  background: rgba(0, 0, 0, 0.5);
  inset: 0;
  opacity: 0;
  pointer-events: none;
  position: fixed;
  transition: opacity 0.3s ease;
  z-index: 200;
}

.c13 {
  align-items: center;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  display: flex;
  flex-shrink: 0;
  justify-content: flex-end;
  padding: 0.75rem 1.5rem;
}

.c12 {
  background: var(--color-background);
  border-left: 1px solid rgba(255, 255, 255, 0.1);
  box-shadow: -4px 0 16px rgba(0, 0, 0, 0.15);
  display: flex;
  flex-direction: column;
  height: 100%;
  position: fixed;
  right: 0;
  top: 0;
  transform: translateX(100%);
  transition: transform 0.3s ease;
  width: 280px;
  z-index: 300;
}

.c0 {
  background: var(--color-background);
  border-bottom: 1px solid transparent;
  box-shadow: none;
  left: 0;
  padding: 0.75rem 0;
  position: fixed;
  right: 0;
  top: 0;
  transition: border-color 0.3s ease,box-shadow 0.3s ease;
  width: 100%;
  z-index: 100;
}

.c4 {
  color: var(--color-headline);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  text-decoration: none;
}

.c5 {
  align-items: center;
  display: none;
  gap: 2rem;
}

.c6 {
  padding-bottom: 2px;
  position: relative;
}

.c6::after {
  background: var(--color-highlight);
  bottom: -4px;
  content: '';
  height: 2px;
  left: 0;
  position: absolute;
  right: 0;
  transform: scaleX(0);
  transform-origin: left;
  transition: transform 0.25s ease;
}

.c9 {
  align-items: center;
  background: none;
  border: none;
  color: var(--color-headline);
  cursor: pointer;
  display: flex;
  justify-content: center;
  min-height: 44px;
  min-width: 44px;
  padding: 0.5rem;
}

.c8 {
  align-items: center;
  background: none;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 4px;
  color: var(--color-headline);
  cursor: pointer;
  display: flex;
  font-size: 0.75rem;
  font-weight: 700;
  justify-content: center;
  letter-spacing: 0.08em;
  min-height: 44px;
  min-width: 44px;
  padding: 0.25rem 0.625rem;
  text-transform: uppercase;
  transition: all 0.2s ease;
}

.c8:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c14 {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  overflow-y: auto;
  padding: 1.5rem;
}

.c15 {
  align-self: flex-start;
  margin-bottom: 1.5rem;
  margin-left: 1.5rem;
  margin-top: auto;
}

@media (hover: hover) {
  .c7:hover {
    opacity: 0.8;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c3:hover {
    color: var(--color-tertiary);
  }
}

@media (min-width: 900px) {
  .c5 {
    display: flex;
  }
}

@media (hover: hover) {
  .c6:hover::after {
    transform: scaleX(1);
  }
}

@media (min-width: 900px) {
  .c10 {
    display: none;
  }
}

@media (hover: hover) {
  .c8:hover {
    background: rgba(255, 255, 255, 0.05);
    border-color: rgba(255, 255, 255, 0.4);
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3 c4"
          href="/"
        >
          Andrea Agostini
        </a>
        <nav
          aria-label="Main navigation"
          class="c5"
        >
          <a
            class="c3 c6"
            href="#projects"
          >
            Projects
          </a>
          <a
            class="c3 c6"
            href="#skills"
          >
            Skills
          </a>
          <a
            class="c3 c6"
            href="#experience"
          >
            Experience
          </a>
          <a
            class="c3 c6"
            href="#contact"
          >
            Contact
          </a>
          <button
            aria-disabled="false"
            aria-label="Switch to Italian"
            class="c7 c8"
            type="button"
          >
            IT
          </button>
        </nav>
        <button
          aria-controls="mobile-nav"
          aria-disabled="false"
          aria-expanded="false"
          aria-label="Open menu"
          class="c7 c9 c10"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          >
            <line
              x1="3"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="21"
              y1="18"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </section>
  </header>
  <div
    class="c11"
  />
  <div
    aria-hidden="true"
    class="c12"
    id="mobile-nav"
    inert=""
  >
    <div
      class="c13"
    >
      <button
        aria-disabled="false"
        aria-label="Close menu"
        class="c7 c9"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <nav
      aria-label="Mobile navigation"
    >
      <div
        class="c14"
      >
        <a
          class="c3"
          href="#projects"
        >
          Projects
        </a>
        <a
          class="c3"
          href="#skills"
        >
          Skills
        </a>
        <a
          class="c3"
          href="#experience"
        >
          Experience
        </a>
        <a
          class="c3"
          href="#contact"
        >
          Contact
        </a>
      </div>
    </nav>
    <button
      aria-disabled="false"
      aria-label="Switch to Italian"
      class="c7 c8 c15"
      type="button"
    >
      IT
    </button>
  </div>
</div>
`;

exports[`SiteHeader renders correctly with no nav links 1`] = `
.c6 {
  background: var(--color-button);
  border: none;
  border-radius: 4px;
  color: var(--color-button-text);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.5;
  opacity: 1;
  padding: 0.75rem 1.25rem;
  transition: all 0.2s ease-in-out;
}

.c6:focus {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c6:focus-visible {
  outline: 2px solid var(--color-button);
  outline-offset: 2px;
}

.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c3 {
  color: var(--color-highlight);
  font-size: 1rem;
  line-height: 1;
  text-decoration: none;
  transition: color 0.2s ease-in-out;
}

.c3:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 2px;
}

.c10 {
  background: rgba(0, 0, 0, 0.5);
  inset: 0;
  opacity: 0;
  pointer-events: none;
  position: fixed;
  transition: opacity 0.3s ease;
  z-index: 200;
}

.c12 {
  align-items: center;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
  display: flex;
  flex-shrink: 0;
  justify-content: flex-end;
  padding: 0.75rem 1.5rem;
}

.c11 {
  background: var(--color-background);
  border-left: 1px solid rgba(255, 255, 255, 0.1);
  box-shadow: -4px 0 16px rgba(0, 0, 0, 0.15);
  display: flex;
  flex-direction: column;
  height: 100%;
  position: fixed;
  right: 0;
  top: 0;
  transform: translateX(100%);
  transition: transform 0.3s ease;
  width: 280px;
  z-index: 300;
}

.c0 {
  background: var(--color-background);
  border-bottom: 1px solid transparent;
  box-shadow: none;
  left: 0;
  padding: 0.75rem 0;
  position: fixed;
  right: 0;
  top: 0;
  transition: border-color 0.3s ease,box-shadow 0.3s ease;
  width: 100%;
  z-index: 100;
}

.c4 {
  color: var(--color-headline);
  cursor: pointer;
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 1.25rem;
  font-weight: 700;
  text-decoration: none;
}

.c5 {
  align-items: center;
  display: none;
  gap: 2rem;
}

.c8 {
  align-items: center;
  background: none;
  border: none;
  color: var(--color-headline);
  cursor: pointer;
  display: flex;
  justify-content: center;
  min-height: 44px;
  min-width: 44px;
  padding: 0.5rem;
}

.c7 {
  align-items: center;
  background: none;
  border: 1px solid rgba(255, 255, 255, 0.2);
  border-radius: 4px;
  color: var(--color-headline);
  cursor: pointer;
  display: flex;
  font-size: 0.75rem;
  font-weight: 700;
  justify-content: center;
  letter-spacing: 0.08em;
  min-height: 44px;
  min-width: 44px;
  padding: 0.25rem 0.625rem;
  text-transform: uppercase;
  transition: all 0.2s ease;
}

.c7:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: 3px;
}

.c13 {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  overflow-y: auto;
  padding: 1.5rem;
}

.c14 {
  align-self: flex-start;
  margin-bottom: 1.5rem;
  margin-left: 1.5rem;
  margin-top: auto;
}

@media (hover: hover) {
  .c6:hover {
    opacity: 0.8;
  }
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (hover: hover) {
  .c3:hover {
    color: var(--color-tertiary);
  }
}

@media (min-width: 900px) {
  .c5 {
    display: flex;
  }
}

@media (min-width: 900px) {
  .c9 {
    display: none;
  }
}

@media (hover: hover) {
  .c7:hover {
    background: rgba(255, 255, 255, 0.05);
    border-color: rgba(255, 255, 255, 0.4);
  }
}

<div>
  <header
    class="c0"
  >
    <section
      class="c1"
    >
      <div
        class="c2"
      >
        <a
          class="c3 c4"
          href="/"
        >
          AA
        </a>
        <nav
          aria-label="Main navigation"
          class="c5"
        >
          <button
            aria-disabled="false"
            aria-label="Switch to Italian"
            class="c6 c7"
            type="button"
          >
            IT
          </button>
        </nav>
        <button
          aria-controls="mobile-nav"
          aria-disabled="false"
          aria-expanded="false"
          aria-label="Open menu"
          class="c6 c8 c9"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
          >
            <line
              x1="3"
              x2="21"
              y1="6"
              y2="6"
            />
            <line
              x1="3"
              x2="21"
              y1="12"
              y2="12"
            />
            <line
              x1="3"
              x2="21"
              y1="18"
              y2="18"
            />
          </svg>
        </button>
      </div>
    </section>
  </header>
  <div
    class="c10"
  />
  <div
    aria-hidden="true"
    class="c11"
    id="mobile-nav"
    inert=""
  >
    <div
      class="c12"
    >
      <button
        aria-disabled="false"
        aria-label="Close menu"
        class="c6 c8"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
    <nav
      aria-label="Mobile navigation"
    >
      <div
        class="c13"
      />
    </nav>
    <button
      aria-disabled="false"
      aria-label="Switch to Italian"
      class="c6 c7 c14"
      type="button"
    >
      IT
    </button>
  </div>
</div>
`;
